CREATE SEQUENCE seq_giao_dich_coc_ma_bien_lai START WITH 1;

CREATE TABLE GIAO_DICH_COC (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    hop_dong_id BIGINT NOT NULL REFERENCES HOP_DONG(id),
    loai VARCHAR(20) NOT NULL,
    so_tien NUMERIC(15,2) NOT NULL,
    ngay DATE NOT NULL,
    nguoi_thu_id BIGINT NOT NULL REFERENCES NGUOI_DUNG(id),
    ma_bien_lai VARCHAR(100) NOT NULL DEFAULT (
        'COC-' || TO_CHAR(CURRENT_DATE, 'YYYYMMDD') || '-'
            || LPAD(NEXTVAL('seq_giao_dich_coc_ma_bien_lai')::TEXT, 8, '0')
    ),
    ly_do TEXT NULL,
    CONSTRAINT ck_giao_dich_coc_loai CHECK (loai IN ('THU_COC', 'HOAN_COC', 'KHAU_TRU_COC')),
    CONSTRAINT ck_giao_dich_coc_so_tien_duong CHECK (so_tien > 0),
    CONSTRAINT uq_giao_dich_coc_ma_bien_lai UNIQUE (ma_bien_lai)
);

CREATE INDEX ix_giao_dich_coc_hop_dong
    ON GIAO_DICH_COC (hop_dong_id, ngay, id);
